# OofGL

./: .gitignore  CMakeLists.txt  README.md  command.py  conanfile.py  init.py  premake5.lua
OofGL/: OofGL.sln  OofGL.vcxproj  OofGL.vcxproj.filters
OofGL/include/glad/: glad.h
OofGL/lib/: glfw3.lib
OofGL/src/: glad.c  window.cpp
dependencies/GLAD/include/glad/: glad.h
dependencies/GLFW/lib/: glfw3.lib
res/shaders/: fragment.glsl
resources/shaders/: fragment.glsl  lightFragment.glsl  lightVertex.glsl  vertex.glsl
src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  ElementBufferObject.cpp  ElementBufferObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Timer.h  VAO.h  VBO.cpp  VBO.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h  glad.c  main.cpp
src/App/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  calc.cpp  calc.h  window.cpp  window.h
